vlib/v/checker/tests/struct_name.out
vlib/v/checker/tests/struct_name.v:1:8: error: struct name must begin with capital letter
    1 | struct abc {
      |        ~~~
    2 |
    3 | }
